# ww-contracts

./: Anchor.toml  package-lock.json  package.json  tsconfig.json
programs/location_epoch/: Cargo.toml
programs/location_epoch/src/: error.rs  lib.rs
programs/location_epoch_manager/: Cargo.toml
programs/location_epoch_manager/src/: lib.rs
programs/location_epoch_manager/src/instructions/: create_new_location_epoch.rs  mod.rs  submit_witness_testimony.rs
programs/location_epoch_manager/src/state/: location_epoch.rs  mod.rs  testimony.rs
programs/location_registry/: Cargo.toml
programs/location_registry/src/: constants.rs  events.rs  lib.rs  location_registry_error.rs
programs/spacetime_segment_manager/: Cargo.toml
programs/spacetime_segment_manager/src/: lib.rs
programs/verifier_manager/: Cargo.toml
programs/verifier_manager/src/: lib.rs
programs/verifier_manager/src/instructions/: create_verifier_epoch_card.rs  initialize_verifier.rs  mod.rs  submit_testimony_review.rs
programs/verifier_manager/src/state/: mod.rs  testimony_review.rs  verifier_epoch_card.rs  verifier_node.rs
programs/witness/: Cargo.toml
programs/witness_manager/: Cargo.toml
programs/witness_manager/src/: lib.rs  witness_error.rs
programs/witness_manager/src/instructions/: commit_to_deposit.rs  initialize_witness.rs  mod.rs  reclaim_from_deposit.rs  request_new_presence_challenge.rs  toggle_witness_enable_state.rs
programs/witness_manager/src/state/: mod.rs  presence_challenge.rs  testimony.rs  witness_node.rs
programs/ww_location_gov/: Cargo.toml
tests/: general.ts  jest.config.js  ww_location.test.ts  ww_location_gov.test.ts
tests/programs/: ww_location.ts  ww_location_gov.ts
(+44 files in other folders)
