[package]
name = "location_epoch_manager"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "location_epoch_manager"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.0"
location_registry = { path = "../location_registry", features = ["no-entrypoint"] } 
witness_manager = { path = "../witness_manager", features = ["no-entrypoint"] } 





