[package]
name = "verifier_manager"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "verifier_manager"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.0"
location_epoch_manager = { path = "../location_epoch_manager", features = ["no-entrypoint"] } 
witness_manager = { path = "../witness_manager", features = ["no-entrypoint"] } 
